compiler/src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.1
package parser;

    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		INT_CONSTANT=39, REAL_CONSTANT=40, CHAR_CONSTANT=41, IDENT=42, LINE_COMMENT=43, 
		MULTILINE_COMMENT=44, WHITESPACE=45;
	public static final int
		RULE_start = 0, RULE_bloques = 1, RULE_estructura = 2, RULE_variableDefinicion = 3, 
		RULE_funcion = 4, RULE_variables = 5, RULE_sentencia = 6, RULE_sentencias = 7, 
		RULE_expr = 8, RULE_arrays = 9, RULE_whileloop = 10, RULE_ifblock = 11, 
		RULE_llamada = 12, RULE_expresionesSeparadas = 13, RULE_parametros = 14, 
		RULE_parametro = 15, RULE_atributos = 16, RULE_atributo = 17, RULE_tipo = 18;
	public static final String[] ruleNames = {
		"start", "bloques", "estructura", "variableDefinicion", "funcion", "variables", 
		"sentencia", "sentencias", "expr", "arrays", "whileloop", "ifblock", "llamada", 
		"expresionesSeparadas", "parametros", "parametro", "atributos", "atributo", 
		"tipo"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'struct'", "'{'", "'}'", "';'", "'var'", "':'", "'('", "')'", "'read'", 
		"'printsp'", "'print'", "'println'", "'='", "'return'", "'.'", "'cast'", 
		"'<'", "'>'", "'*'", "'/'", "'+'", "'-'", "'=='", "'!='", "'>='", "'<='", 
		"'!'", "'&&'", "'||'", "'['", "']'", "'while'", "'if'", "'else'", "','", 
		"'int'", "'float'", "'char'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "IDENT", 
		"LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public BloquesContext bloques;
		public BloquesContext bloques() {
			return getRuleContext(BloquesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			((StartContext)_localctx).bloques = bloques();
			setState(39);
			match(EOF);
			 ((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).bloques.list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloquesContext extends ParserRuleContext {
		public List<Bloque> list = new ArrayList<Bloque>();
		public VariableDefinicionContext variableDefinicion;
		public EstructuraContext estructura;
		public FuncionContext funcion;
		public List<VariableDefinicionContext> variableDefinicion() {
			return getRuleContexts(VariableDefinicionContext.class);
		}
		public VariableDefinicionContext variableDefinicion(int i) {
			return getRuleContext(VariableDefinicionContext.class,i);
		}
		public List<EstructuraContext> estructura() {
			return getRuleContexts(EstructuraContext.class);
		}
		public EstructuraContext estructura(int i) {
			return getRuleContext(EstructuraContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public BloquesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloques; }
	}

	public final BloquesContext bloques() throws RecognitionException {
		BloquesContext _localctx = new BloquesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloques);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << IDENT))) != 0)) {
				{
				setState(51);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__4:
					{
					setState(42);
					((BloquesContext)_localctx).variableDefinicion = variableDefinicion();
					 _localctx.list.add(((BloquesContext)_localctx).variableDefinicion.ast); 
					}
					break;
				case T__0:
					{
					setState(45);
					((BloquesContext)_localctx).estructura = estructura();
					 _localctx.list.add(((BloquesContext)_localctx).estructura.ast); 
					}
					break;
				case IDENT:
					{
					setState(48);
					((BloquesContext)_localctx).funcion = funcion();
					 _localctx.list.add(((BloquesContext)_localctx).funcion.ast); 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstructuraContext extends ParserRuleContext {
		public EstructuraDef ast;
		public Token IDENT;
		public AtributosContext atributos;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public AtributosContext atributos() {
			return getRuleContext(AtributosContext.class,0);
		}
		public EstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estructura; }
	}

	public final EstructuraContext estructura() throws RecognitionException {
		EstructuraContext _localctx = new EstructuraContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_estructura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(T__0);
			setState(57);
			((EstructuraContext)_localctx).IDENT = match(IDENT);
			setState(58);
			match(T__1);
			setState(59);
			((EstructuraContext)_localctx).atributos = atributos();
			setState(60);
			match(T__2);
			setState(61);
			match(T__3);
			 ((EstructuraContext)_localctx).ast =  new EstructuraDef(((EstructuraContext)_localctx).IDENT, ((EstructuraContext)_localctx).atributos.list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDefinicionContext extends ParserRuleContext {
		public VarDef ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public VariableDefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDefinicion; }
	}

	public final VariableDefinicionContext variableDefinicion() throws RecognitionException {
		VariableDefinicionContext _localctx = new VariableDefinicionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDefinicion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__4);
			setState(65);
			((VariableDefinicionContext)_localctx).IDENT = match(IDENT);
			setState(66);
			match(T__5);
			setState(67);
			((VariableDefinicionContext)_localctx).tipo = tipo();
			setState(68);
			match(T__3);
			 ((VariableDefinicionContext)_localctx).ast =  new VarDef(((VariableDefinicionContext)_localctx).IDENT, ((VariableDefinicionContext)_localctx).tipo.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public FuncionDef ast;
		public Token IDENT;
		public ParametrosContext parametros;
		public TipoContext tipo;
		public VariablesContext variables;
		public SentenciasContext sentencias;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			((FuncionContext)_localctx).IDENT = match(IDENT);
			setState(72);
			match(T__6);
			setState(73);
			((FuncionContext)_localctx).parametros = parametros();
			setState(74);
			match(T__7);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(75);
				match(T__5);
				setState(76);
				((FuncionContext)_localctx).tipo = tipo();
				}
			}

			setState(79);
			match(T__1);
			setState(80);
			((FuncionContext)_localctx).variables = variables();
			setState(81);
			((FuncionContext)_localctx).sentencias = sentencias();
			setState(82);
			match(T__2);
			 
						if (((FuncionContext)_localctx).tipo==null) ((FuncionContext)_localctx).ast =  new FuncionDef(((FuncionContext)_localctx).IDENT, ((FuncionContext)_localctx).parametros.list, null, ((FuncionContext)_localctx).variables.list, ((FuncionContext)_localctx).sentencias.list);
						else ((FuncionContext)_localctx).ast =  new FuncionDef(((FuncionContext)_localctx).IDENT, ((FuncionContext)_localctx).parametros.list, ((FuncionContext)_localctx).tipo.ast, ((FuncionContext)_localctx).variables.list, ((FuncionContext)_localctx).sentencias.list);
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public List<VarDef> list = new ArrayList<VarDef>();
		public VariableDefinicionContext variableDefinicion;
		public List<VariableDefinicionContext> variableDefinicion() {
			return getRuleContexts(VariableDefinicionContext.class);
		}
		public VariableDefinicionContext variableDefinicion(int i) {
			return getRuleContext(VariableDefinicionContext.class,i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(85);
				((VariablesContext)_localctx).variableDefinicion = variableDefinicion();
				 _localctx.list.add(((VariablesContext)_localctx).variableDefinicion.ast); 
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public Sentencia ast;
		public ExprContext expr;
		public Token o;
		public ExprContext left;
		public ExprContext right;
		public LlamadaContext llamada;
		public WhileloopContext whileloop;
		public IfblockContext ifblock;
		public Token r;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public LlamadaContext llamada() {
			return getRuleContext(LlamadaContext.class,0);
		}
		public WhileloopContext whileloop() {
			return getRuleContext(WhileloopContext.class,0);
		}
		public IfblockContext ifblock() {
			return getRuleContext(IfblockContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sentencia);
		int _la;
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(T__8);
				setState(94);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(95);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =  new Read(((SentenciaContext)_localctx).expr.ast); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				((SentenciaContext)_localctx).o = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11))) != 0)) ) {
					((SentenciaContext)_localctx).o = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(99);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(100);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =  new Print((((SentenciaContext)_localctx).o!=null?((SentenciaContext)_localctx).o.getText():null), ((SentenciaContext)_localctx).expr.ast); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				((SentenciaContext)_localctx).left = expr(0);
				setState(104);
				match(T__12);
				setState(105);
				((SentenciaContext)_localctx).right = expr(0);
				setState(106);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =  new Assign(((SentenciaContext)_localctx).left.ast, ((SentenciaContext)_localctx).right.ast); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(109);
				((SentenciaContext)_localctx).llamada = llamada();
				setState(110);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =   new LlamadaS(((SentenciaContext)_localctx).llamada.ast); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				((SentenciaContext)_localctx).whileloop = whileloop();
				 ((SentenciaContext)_localctx).ast =  ((SentenciaContext)_localctx).whileloop.ast; 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(116);
				((SentenciaContext)_localctx).ifblock = ifblock();
				 ((SentenciaContext)_localctx).ast =   ((SentenciaContext)_localctx).ifblock.ast; 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(119);
				((SentenciaContext)_localctx).r = match(T__13);
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__15) | (1L << T__26) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << IDENT))) != 0)) {
					{
					setState(120);
					((SentenciaContext)_localctx).expr = expr(0);
					}
				}

				setState(123);
				match(T__3);
				 
							if (((SentenciaContext)_localctx).expr == null) ((SentenciaContext)_localctx).ast =  new ReturnSent(null); 
							else ((SentenciaContext)_localctx).ast =  new ReturnSent(((SentenciaContext)_localctx).expr.ast); 
							_localctx.ast.setPositions(((SentenciaContext)_localctx).r);
						
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciasContext extends ParserRuleContext {
		public List<Sentencia> list = new ArrayList<Sentencia>();
		public SentenciaContext sentencia;
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sentencias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__15) | (1L << T__26) | (1L << T__31) | (1L << T__32) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << IDENT))) != 0)) {
				{
				{
				setState(127);
				((SentenciasContext)_localctx).sentencia = sentencia();
				 _localctx.list.add(((SentenciasContext)_localctx).sentencia.ast); 
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Expresion ast;
		public ExprContext v;
		public ExprContext left;
		public Token INT_CONSTANT;
		public Token REAL_CONSTANT;
		public Token CHAR_CONSTANT;
		public Token IDENT;
		public ExprContext expr;
		public TipoContext tipo;
		public Token op;
		public ExprContext right;
		public LlamadaContext llamada;
		public ArraysContext arrays;
		public TerminalNode INT_CONSTANT() { return getToken(GrammarParser.INT_CONSTANT, 0); }
		public TerminalNode REAL_CONSTANT() { return getToken(GrammarParser.REAL_CONSTANT, 0); }
		public TerminalNode CHAR_CONSTANT() { return getToken(GrammarParser.CHAR_CONSTANT, 0); }
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public LlamadaContext llamada() {
			return getRuleContext(LlamadaContext.class,0);
		}
		public ArraysContext arrays() {
			return getRuleContext(ArraysContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}
